[package]
name = "bevy-explorer"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16"
bevy_rapier3d = { version = "0.31", optional = true }
avian3d = { version = "0.3", optional = true }

[[bin]]
name = "bevy-explorer"
path = "src/main.rs"
required-features = ["rapier"]

# Cargo.toml
[profile.dev]
incremental = true
codegen-units = 256
debug = true
lto = "off"  # keep off in dev for speed

[profile.release]
codegen-units = 1
lto = "thin" # combine with mold/clang for faster release links
opt-level = 3
